--- a/Runtime/Depra.Serialization.Unity.asmdef
+++ b/Runtime/Depra.Serialization.Unity.asmdef
@@ -5,8 +5,10 @@
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "Depra.Serialization.dll"
+    ],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
