--- a/Runtime/Depra.Serialization.Unity.asmdef
+++ b/Runtime/Depra.Serialization.Unity.asmdef
@@ -7,7 +7,8 @@
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "Depra.Serialization.dll"
+        "Depra.Serialization.dll",
+        "Depra.Serialization.Json.Newtonsoft.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
