--- a/Runtime/Depra.Serialization.Runtime.asmdef
+++ b/Runtime/Depra.Serialization.Runtime.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Depra.Serialization.Unity",
+    "name": "Depra.Serialization.Runtime",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
