--- a/Samples/Depra.Serialization.Example.asmdef
+++ b/Samples/Depra.Serialization.Example.asmdef
@@ -1,17 +1,15 @@
 {
-    "name": "Depra.Serialization.Unity.Editor",
+    "name": "Depra.Serialization.Example",
     "rootNamespace": "",
     "references": [
         "GUID:93bbe3657012204429db7a288b4f57ba"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": true,
+    "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
